tests/sema/fail/v21_fail_extern_library_separator.ep
# COMPILE_FAIL: extern Bad library contains an unsupported character
extern "bad$name.dll" fun Bad(): i64
fun main(): void {}
